- changed height=6.8em to min-height=6.8em, because paragraphs' height was too small. if someone think the height should remain fixed, please propose a value :)
svn path=/trunk/; revision=17142

--- a/style/fsfeurope.css
+++ b/style/fsfeurope.css
@@ -788,7 +788,7 @@ h2#subpages + ul li,
 h3#subpages + ul li,
 h4#subpages + ul li {
 	float: left;
-	height: 6.8em;
+	min-height: 6.8em;
 	margin-bottom: .1em;
 	padding-right: 3%;
 	width: 47%;
